--- a/project/css/blocks/offers.css
+++ b/project/css/blocks/offers.css
@@ -35,7 +35,10 @@
     display: flex;
     align-items: flex-start;
 }
-
+.offers__line {
+    display: flex;
+    flex-direction: row;
+}
 .offers__subtitle {
     padding-bottom: 50px;
     font-size: 28px;
@@ -56,8 +59,13 @@
 
 .offers__parameter {
     padding-bottom: 20px;
+    width: 300px;
+    height: 230px;
 }
-
+.offers__parameter--left {
+width: 251px;
+height: 200px;
+}
 .offers__parameter-list {
     padding-bottom: 30px;
 }
@@ -69,7 +77,10 @@
 .offers__advantage {
     padding-bottom: 30px;
 }
-
+.offers__price-block {
+    width: 300px;
+    height: 77px;
+}
 .offers__box {
     width: 600px;
     height: 600px;
@@ -105,4 +116,10 @@
 .offers__advantage {
     font-size: 20px;
     line-height: 0.5;
+}
+/* .offers__parameter-item--1 {
+    white-space: pre-wrap;} */
+
+.offers__line--one {
+    height: 
 }
